fix alignment of columns of index.html to be responsive with bootstrap columns

--- a/VIRGO VENTURES CLIENTS/GYM STORE/GymStore landing page files/customfitnessequipment.com/css/style.css
+++ b/VIRGO VENTURES CLIENTS/GYM STORE/GymStore landing page files/customfitnessequipment.com/css/style.css
@@ -610,10 +610,10 @@ h3.c-head{
 .coats small a:hover{
 	border-bottom:2px solid #606060;
 }
-.coat-row{
+.row{
 	padding:3em 0 2em;
 }
-.coat-column{
+.col-lg-4 col-md-4 col-sm-6 col-xs-12{
 	width:24%;
 	height: ;
 	float:left;
@@ -621,20 +621,24 @@ h3.c-head{
 	position:relative;
 	padding-bottom: 20px;
 }
-.coat-column img {
+.col-lg-4 col-md-4 col-sm-6 col-xs-12 img {
 	width: 100%;
 }
-.coat-column1{
+.col-lg-4 col-md-4 col-sm-6 col-xs-121{
 	width:22%;
 	float:right;
 	position:relative;
 }
-.coat-column3{
+.col-lg-4 col-md-4 col-sm-6 col-xs-123{
 	width:22%;
 	float:left;
 	margin-right:5%;
 	margin-left: 5%;
 	position:relative;
+}
+.prod-desc {
+	margin-bottom: 20px;
+	text-align: center;
 }
 .prod-desc .mask .info {
 	text-align:center;
@@ -651,17 +655,17 @@ h3.c-head{
 	font-weight:400;
 	color:#606060;
 }
-.coat-column a, .coat-column1 a{
+.col-lg-4 col-md-4 col-sm-6 col-xs-12 a, .col-lg-4 col-md-4 col-sm-6 col-xs-121 a{
 	text-decoration:none;
 }
-.coat-column a img, .coat-column1 a img{
+.col-lg-4 col-md-4 col-sm-6 col-xs-12 a img, .col-lg-4 col-md-4 col-sm-6 col-xs-121 a img{
 }
-.coat-column:hover .mask, .coat-column1:hover .mask {
+.col-lg-4 col-md-4 col-sm-6 col-xs-12:hover .mask, .col-lg-4 col-md-4 col-sm-6 col-xs-121:hover .mask {
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: alpha(opacity=100);
 	opacity: 1;
 }
-.coat-column .mask, .coat-column1 .mask{
+.col-lg-4 col-md-4 col-sm-6 col-xs-12 .mask, .col-lg-4 col-md-4 col-sm-6 col-xs-121 .mask{
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
@@ -680,7 +684,7 @@ h3.c-head{
 	font-size: 0.85em;
 	font-weight: bold;
 }
-.coat-column .mask, .coat-column1 .mask{
+.col-lg-4 col-md-4 col-sm-6 col-xs-12 .mask, .col-lg-4 col-md-4 col-sm-6 col-xs-121 .mask{
 	position:absolute;
 	top:35%;
 	left:35%;
@@ -1355,12 +1359,12 @@ ul.size-list li a:hover{
 		margin-top: 0em;
 		text-align: center;
 	}
-	.coat-column {
+	.col-lg-4 col-md-4 col-sm-6 col-xs-12 {
 		width: 47%;
 		margin-right: 3%;
 		margin-bottom: 2em;
 	}
-	.coat-column1 {
+	.col-lg-4 col-md-4 col-sm-6 col-xs-121 {
 		width: 47%;
 		margin-right:3%;
 	}
@@ -1466,7 +1470,7 @@ ul.size-list li a:hover{
 	.subscribe p {
 		font-size: 0.75em;
 	}
-	.coat-column .mask, .coat-column1 .mask {
+	.col-lg-4 col-md-4 col-sm-6 col-xs-12 .mask, .col-lg-4 col-md-4 col-sm-6 col-xs-121 .mask {
 		top: 22%;
 		left: 23%;
 	}
